# TiObj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tiobj.lang
cpp/: .sysobj.ti  CMakeLists.txt  readme.txt
cpp/.tmp/DEBIAN/: control
cpp/examples/: foreach.cpp  groupby.cpp  load.cpp  orderby.cpp  save.cpp  select.cpp  stream_filter.cpp  teste.cpp  ti2json.cpp
cpp/include/: tiasm.hpp  tiobj-cv.hpp  tiobj.hpp  tiparser.hpp  tipool.hpp  titextasm.hpp
cpp/src/: join.cpp  parser.cpp  tiasm.cpp  tibuilder.cpp  tiobj.cpp  tiparser.cpp  tistream.cpp  titextasm.cpp  tivar.cpp  tivarpkg.cpp  tivet-my.cpp  tivet.cpp
cpp/tests/: all.ti  api.cpp  basic.cpp  bbig.ti  big.ti  binary.ti  create  create.cpp  curiosidades.cpp  error01.ti  error02.ti  foreach.cpp  stream.ti  stream2.ti  test01.ti  test_cv.cpp  test_parser.cpp  test_speed.cpp  var_1000.ti  var_10000.ti  var_100000.ti  var_20.ti  var_name_1000.ti  var_name_10000.ti  var_rand_1000.ti  var_rand_10000.ti  var_rand_100000.ti  var_rand_20.ti
etc/: tiobj.lang
examples-cpp/: loadfile.cpp  set1.cpp  teste.cpp  tiobj-read.cpp
javascript/: tiobj.js
php/: tiobj.php
python/: tiobj.py
share/: tiobj.lang
src-bin/: tiforeach.cpp  tiobj-read.cpp  tiobj-select.cpp  tiparser.cpp
src-cpp/: join.cpp  tiobj.cpp  tiobj.hpp  tiparser.cpp  tivector.cpp  tivector.hpp
src-php/: sysobj.ti  teste.php  teste.ti  tiobj.php  tiparser.php
src-python/: tiobj.py
tests/: all.json  all.ti  json.php  json.py  mini.ti  teste.json  teste.ti
